Add AddNoteFragment